examples/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-k8s-service
spec:
  selector:
    app: server-k8s
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
